[package]
name = "rust-stg"
version = "0.1.0"
authors = ["yytpr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "^0.5"
glium = "^0.25"
#glium_text = "^0.14"
cgmath = "^0.17"
num-traits = "^0.2"
png = "^0.15"

rand = "*"